--- a/apps/hotelapp/common/register.html
+++ b/apps/hotelapp/common/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form>
+<form method="post">
   <div class="container">
     <h1>Register</h1>
     <p>Please fill in this form to create an account.</p>
@@ -46,6 +46,8 @@
   </div>
 
 </form>
-
+<script src="js/initOptions.js"></script>
+    		<script src="js/main.js"></script>
+    		<script src="js/messages.js"></script>
 </body>
 </html>
