Add login and booking module code

--- a/apps/hotelapp/common/login.html
+++ b/apps/hotelapp/common/login.html
@@ -25,5 +25,8 @@
       <span class="psw"> <a href="#"> Forgot password?</a></span>
     </div>
   </form>
+  <script src="js/initOptions.js"></script>
+<script src="js/main.js"></script>
+<script src="js/messages.js"></script>
 </body>
 </html>
