--- a/apps/hotelapp/common/bookingpage.html
+++ b/apps/hotelapp/common/bookingpage.html
@@ -7,7 +7,7 @@
 <body>
 <br>
 <br><br><br><br><br><br>
-<label for="cars">Select checkin date:</label>
+<label for="checkin">Select checkin date:</label>
 <input type="date" name="checkin" min= "2020-01-01" max="2021-01-01">
 <br><br>
 <br>
@@ -40,6 +40,9 @@
 </select>
 <br>
 <br>
-<button type = "submit">Book</button>
+<button type = "submit" onclick= "book()">Book</button>
+<script src="js/initOptions.js"></script>
+<script src="js/main.js"></script>
+<script src="js/messages.js"></script>
 </body>
 </html>
